upd: add swagger to getStudentSolutionOnTask
